@@ -57,6 +57,7 @@ UNIX_LIB := \
 	stdlib_alloca_cleanup.o \
 	stdlib_alloca_trap.o \
 	stdlib_arg.o \
+	stdlib_dlopen.o \
 	stdlib_expand_wildcard.o \
 	stdlib_expand_wildcard_check.o \
 	stdlib_getmemstats.o \
