@@ -1,3 +1,7 @@
+- Added dlclose(), dlerror(), dlopen() and dlsym() functions, which are
+  available only under OS4. There is a variant of dlopen() in libunix.a
+  which will perform a path name conversion.
+
 - The shared object initialization has to be performed before any local
   constructors are invoked, and after all local destructors have been
   invoked.
